--- a/paper.tex
+++ b/paper.tex
@@ -279,7 +279,7 @@ page, and hovers over a data value she might like to scrape.
 
 \begin{figure*}
   \includegraphics[width=\textwidth]{media/creating.png}
-  \caption{\label{fig:creating} Creating an adapter: 1) column data will be scraped into, 2) system's controls, 3) demonstrated column value and row from which colums should be demonstrated from 4) column values determined by generalization algorithm 5) column values populated in table, 6) next column to scrape data into and 7) button to save adapter created by demonstration}
+  \caption{\label{fig:creating} Creating an adapter: 1) column data will be scraped into, 2) system's controls, 3) demonstrated column value and row from which columns should be demonstrated from 4) column values determined by generalization algorithm 5) column values populated in table, 6) next column to scrape data into and 7) button to save adapter created by demonstration}
 \end{figure*}
 
 The workflow steps are shown in Figure~\ref{fig:creating}:
@@ -587,7 +587,6 @@ separate activity from customization. Programmers that wrote scraping
 adapters would need to switch into an IDE to write code as part of
 customizing a new website.
 
-\textless\textless\textless\textless\textless\textless\textless{} HEAD
 This type of divide between tasks appears in other domains. In data
 science, workflows revolve between cleaning and using data but this
 often happens in different environments. The creators of Wrex
@@ -603,38 +602,14 @@ need to switch from the environment in which they are using the data to
 the environment in which they created their scraping code in order to
 edit and re-run it. This can be seen in many end-user web scraping
 systems like Rousillon \citep{chasins2018}and FlashExtract
-\citep{le2014} and commercial tools like import.io \citep{zotero-77},
-dexi.io \citep{dexi.io}, Octoparse \citep{zotero-83} and ParseHub
-\citep{zotero-86}. In web customization, the creators of Vegemite
+\citep{le2014} and commercial tools like import.io \citep{import.io},
+dexi.io \citep{dexi.io}, Octoparse \citep{octoparse} and ParseHub
+\citep{parsehub}. In web customization, the creators of Vegemite
 \citep{lin2009}, a system for end-user programming of mashups, reported
 that participants of its user study thought ``it was confusing to use
 one technique to create the initial table, and another technique to add
 information to a new column.'' This hints at the need for both a unified
-environment and a unified workflow. ======= This type of divide between
-tasks appears in other domains. In data science, workflows revolve
-between cleaning and using data but this often happens in different
-environments. The creators of Wrex \citep{drosos2020}, an end-user
-programming-by-example system for data wrangling, reported that
-``although data scientists were aware of and appreciated the
-productivity benefits of existing data wrangling tools, having to leave
-their native notebook environment to perform wrangling limited the
-usefulness of these tools.'' This was a major reason Wrex was developed
-as an add-on to Jupyter notebooks, the environment in which data
-scientists use their data. In web scraping, if a user comes across an
-omission while working with data scraped from a website, they need to
-switch from the environment in which they are using the data to the
-environment in which they created their scraping code in order to edit
-and re-run it. This can be seen in many end-user web scraping systems
-like Rousillon \citep{chasins2018} and commercial tools like import.io
-\citep{import.io}, dexi.io \citep{dexi.io}, Octoparse \citep{octoparse}
-and ParseHub \citep{parsehub}. In web customization, the creators of
-Vegemite \citep{lin2009}, a system for end-user programming of mashups,
-reported that participants of its user study thought ``it was confusing
-to use one technique to create the initial table, and another technique
-to add information to a new column.'' This hints at the need for both a
-unified environment and a unified workflow.
-\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater\textgreater{}
-dff119bf9a1215fb2847215abe2c9722e90542f1
+environment and a unified workflow.
 
 In this work, we have combined scraping and customization into a single,
 unified environment with a unified workflow. The goal is to minimize the
@@ -646,7 +621,7 @@ which point they can easily extend the adapter by demonstrating new
 columns. All of these tasks take place right in the browser, where the
 user was initially already using the website. Instead of bringing the
 data to another tool, we have brought a tool to the data. This directly
-relates to the idea of ``in-place toolchains'' \citep{zotero-60} being
+relates to the idea of ``in-place toolchains'' \citep{zotero-1362} being
 an integral part of end-user programming systems.
 
 Of course, there is value in specialized tools: Wildcard has nowhere
@@ -663,22 +638,22 @@ Many end-user web scraping and macro systems allow users to
 \emph{edit} them by demonstration. In Rousillon \citep{chasins2018}, a
 web scraping program created by demonstration can only be edited through
 a high-level, block-based programming language called Helena
-\citep{zotero-51}. Helena supports adding control flow logic
+\citep{zotero-1349}. Helena supports adding control flow logic
 (conditional execution, wait times etc) which is invaluable for
 automating access to websites. However, it does not support extending
 the web scraping code to add new columns after the demonstration or
 repairing it to provide new selectors if the website changes. In
 Vegemite \citep{lin2009}, a web automation program created through
 demonstration can only be edited by editing the text-based
-representation of the automtation demonstrations. In fact, only the
+representation of the automation demonstrations. In fact, only the
 demonstrations used to perform automations on the scraped website data
-can be edited. If a user needs to add a new column or repair an
-exisiting one in the scraped data table, they need to re-demonstrate the
-columns and then re-run the automation script. One exception to existing
-editing models worth pointing out is import.io \citep{zotero-77}. It
-allows users to add new columns by demonstration but it is not clear
-whether deleting a column and re-demonstrating it could serve the
-purpose of repair.
+can be edited. If a user needs to add a new column or repair an existing
+one in the scraped data table, they need to re-demonstrate the columns
+and then re-run the automation script. One exception to existing editing
+models worth pointing out is import.io \citep{import.io}. It allows
+users to add new columns by demonstration but it is not clear whether
+deleting a column and re-demonstrating it could serve the purpose of
+repair.
 
 In Wildcard, if a website's hand-coded adapter ceases to function
 because the website changes, the table may lose its data which means
@@ -741,13 +716,13 @@ FlashProg \citep{mayer2015}, a framework that provides user interface
 support for programming-by-demonstration systems like FlashExtract
 \citep{le2014}, and relates to the idea that an important quality of
 end-user programming is ``interaction with a living system''
-\citep{zotero-60}.
+\citep{zotero-1362}.
 
 Unlike text-based commands which are only valid once complete (e.g
 \texttt{SELECT\ *\ FRO} versus \texttt{SELECT\ *\ FROM\ user\_table}),
 the target of demonstration commands (the value of a DOM element under
 the cursor) is the same during both hover and click (incomplete command
-verus complete command). This allows us to take a small step further by
+versus complete command). This allows us to take a small step further by
 executing a command before a user completes it, thereby providing them
 with a preview of the results on hover.
 
@@ -782,7 +757,7 @@ and customizing websites.
 
 Rousillon \citep{chasins2018} is a tool that enables end-users to scrape
 distributed, hierarchical web data. Because demonstrations can span
-across several websites and involve complex data access automtation
+across several websites and involve complex data access automation
 tasks, its interface does not provide \emph{full} live feedback about
 its generalizations or the values to be scrapped until all the
 demonstrations have been provided and the generated program has been
@@ -794,7 +769,7 @@ actively explore in order to discover which values are available for
 scraping and how they are related to each other. On the extension and
 repair front, Rousillon presents the web scraping code generated by
 demonstration as an editable, high-level, block-based language called
-Helena \citep{zotero-51}. While Helena can be used to perform more
+Helena \citep{zotero-1349}. While Helena can be used to perform more
 complex editing tasks like adding control flow, it does not support
 adding or repairing columns after the demonstrations and presents a
 change in the model used for creation. Our system maintains the model
@@ -836,8 +811,8 @@ if the goal is customization. Given a row with ten scrapable values, and
 therefore ten columns, would a user prefer to simply demonstrate the
 value for the single column they are interested in or un-demonstrate the
 nine values they are not interested in? This automatic web scraping
-aproach can be also be seen in tools like import.io \citep{zotero-77} so
-it is certainly worth evaluating as part of a user study.
+approach can be also be seen in tools like import.io \citep{import.io}
+so it is certainly worth evaluating as part of a user study.
 
 \hypertarget{sec:conclusion}{%
 \section{Conclusion And Future Work}\label{sec:conclusion}}
@@ -866,8 +841,8 @@ of DOM access and processing ability.
 
 To assess our design principles, we plan to carry out a broader
 evaluation of our system through a user study. So far, we have only
-tested the system amongst overselves and a small number of collegues.
-More testing is needed to understand whether it can be succussfully used
+tested the system amongst ourselves and a small number of colleagues.
+More testing is needed to understand whether it can be successfully used
 among a broader set set of users across a wider variety of websites.
 Furthermore, we plan to incorporate the program viewer and
 disambiguation features of FlashProg \citep{mayer2015} to give users
