--- a/paper.tex
+++ b/paper.tex
@@ -114,24 +114,21 @@
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-  Websites are malleable: users can install browser extensions and run
-  arbitrary Javascript in the developer console to change them. However,
-  this malleability is only accessible to programmers with knowledge of
-  HTML and Javascript. To broaden access to customization, our prior
-  work developed an approach that empowers end-users to customize
-  websites without traditional programming via a browser extension
-  called Wildcard. However, Wildcard only opened part of the
-  customization process to end-users, and still required programmers to
-  write site-specific adapters to map website data to a table view
-  through which the customizations are made. This means that end-users
-  can only customize a website if a programmer has written an adapter
-  for it. Furthermore, end-users do not have the ability to extend
-  adapters in order to perform new customizations or repair adapters to
-  fix broken customizations.
+  Websites are malleable: users can run code in the browser to customize
+  them. However, this malleability is typically only accessible to
+  programmers with knowledge of HTML and Javascript. Previously, we
+  developed a tool called Wildcard which empowers end-users to customize
+  websites through a data table interface without doing traditional
+  programming. However, there is a limit on end-user flexibility with
+  Wildcard, because programmers need to create site-specific adapters
+  mapping website data to a table view. This means that end-users can
+  only customize a website if a programmer has written an adapter for
+  it, and cannot extend or repair existing adapters.
 
   In this paper, we extend Wildcard with a new system for \emph{end-user
-  web scraping for customization} which enables end-users to create,
-  extend and repair adapters by demonstration. We describe three design
+  web scraping for customization}. It enables end-users to create,
+  extend and repair adapters, by performing concrete demonstrations of
+  how the webpage UI maps to a data table. We describe three design
   principles that guided our system's development and are applicable to
   other end-user web scraping and customization systems: (a) users
   should be able to scrape data and use it in a single, unified
@@ -165,7 +162,7 @@
 %%
 %% Keywords. The author(s) should pick words that accurately describe
 %% the work being presented. Separate the keywords with commas.
-\keywords{end-user programming, software customization, web browser extensions}
+\keywords{end-user programming, software customization, web scraping, programming by example}
 
 %% A "teaser" image appears between the author and affiliation
 %% information and the body of the document, and typically spans the
@@ -202,7 +199,7 @@ adding annotations, and running computations in a spreadsheet formula
 language.
 
 Wildcard has a key limitation. In order to enable end-users to customize
-a website, a Javascript programmer first needs to code an adapter that
+a website, a programmer first needs to code a Javascript adapter that
 specifies how to scrape the website content and set up a bidirectional
 synchronization with Wildcard's table view. Even though programmers can
 share adapters with end-users, this means that an end-user can only use
@@ -244,9 +241,8 @@ applied to other end-user web scraping and customization tools
   \textbf{Editing By Demonstration}: Users should be able to not only
   create programs for scraping data by demonstration, but also extend
   and repair the programs by demonstration. This enables users to build
-  on other user's work, and is especially important in the context of
-  web scraping since programs that scrape data sometimes break as the
-  underlying website changes.
+  on other users' work, and is especially important in the context of
+  web scraping since scrapers break as the underlying website changes.
 \item
   \textbf{Live Programming}: Users should receive live feedback as they
   perform demonstrations. The system should indicate how it is
@@ -296,7 +292,7 @@ Figure~\ref{fig:creating}:
 \item
   The selected column of data is highlighted in the page with a green
   background, to show how the system has generalized her demonstration
-  across all the rows in the data (Part 3 and 4).
+  across all the rows in the data (Part 4).
 \item
   A table view appears at the bottom of the screen, and displays how the
   values will appear in the data table (Part 5).
@@ -320,13 +316,13 @@ scraping and customizing.
 \hypertarget{extending-an-adapter}{%
 \subsection{Extending An Adapter}\label{extending-an-adapter}}
 
-Jen uses Wildcard on timeanddate.com. In addition to sorting the list of
-holidays in a year by the day of the week, she also wants to sort them
-by category so she can view all the federal holidays together.
-Previously, she would have needed to find a programmer to help her edit
-the adapter code to incorporate this additional data, but using our
-system's support for \textbf{editing by demonstration}, Jen can extend
-the adapter herself.
+Jen has previously used Wildcard to customize timeanddate.com, sorting
+holidays by day of the week. She comes up with a new customization idea:
+sorting holidays by category so she can view all the federal holidays
+together. The current site adapter she is using does not populate the
+category column in the table, so she needs to extend the adapter. She
+can immediately perform the extension in the context of the page, using
+our system's support for \textbf{editing by demonstration}.
 
 \begin{figure*}
   \includegraphics[width=\textwidth]{media/extending.png}
@@ -407,10 +403,9 @@ We take an approach similar to that used in other tools like Vegemite
 
 One important difference is that our algorithm only accepts row elements
 that have direct siblings with a similar structure. We refer to this as
-the \emph{row-sibling} constraint. Later in this section, we describe
-how the constraint provides a useful simplification of the wrapper
-induction task and discuss the resulting limitations this puts on our
-system in a section that follows.
+the \emph{row-sibling} constraint. Later, we describe how the constraint
+provides a useful simplification of the wrapper induction task and
+discuss the resulting limitations this puts on our system.
 
 When a user first demonstrates a column value, the generalization
 algorithm is responsible for turning the demonstration into a row
@@ -440,42 +435,39 @@ Figure~\ref{fig:algorithm} containing ``Tony Stark.'' Our algorithm
 traverses upwards from the demonstrated element, considering each
 successive parent element ((b1), (c1) and (d) in
 Figure~\ref{fig:algorithm}) as a potential candidate for the row
-element. For each parent element \(n\), the process is as follows:
+element. For each parent element \texttt{el}, the process is as follows:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  compute a column selector \(s\) that when executed on \(n\) only
-  returns the demonstrated element
+  compute a column selector \texttt{selector} that, when executed on
+  \texttt{el}, only returns the demonstrated element
 \item
-  for each sibling \(m\) of \(n\), execute \(s\) on \(m\) and record
-  whether the selector returned an element. Intuitively, if the selector
-  returns an element, this suggests that the sibling \(m\) has some
-  parallel structure to \(n\)
+  for each sibling \texttt{el\textquotesingle{}} of \texttt{el}, execute
+  \texttt{selector} on \texttt{el\textquotesingle{}} and record whether
+  the selector returns an element. If it does, this suggests that
+  \texttt{el\textquotesingle{}} has some parallel structure to
+  \texttt{el}.
 \item
-  compute \(n_{siblings}\), the number of sibling elements of \(n\) for
-  which \(s\) returned an element
+  compute \(n_{siblings}\), the number of sibling elements of
+  \texttt{el} which have parallel structure.
 \end{enumerate}
 
-Notice how the \emph{row-sibling} constraint simplifies the problem: row
-candidates without siblings that return an element after \(s\) is
-executed on them ((b1) in Figure~\ref{fig:algorithm}) have
-\(n_{siblings}\) = 0, thus disqualifying them. Furthermore, a candidate
-element \(n\) is only accepted as the row element if the row selector
-\(n_{selector}\) associated with it only matches itself and elements
-that are its direct siblings.
+Notice how the \emph{row-sibling} constraint simplifies the problem. Row
+candidates without siblings with parallel structure ((b1) in
+Figure~\ref{fig:algorithm}) have \(n_{siblings}\) = 0, thus
+disqualifying them.
 
 The algorithm stops traversing upwards once it reaches the BODY element.
-Then, it generates a selector \(n_{selector}\) for each \(n\) and
-discards any \(n\) with an \(n_{selector}\) that matches elements that
-are either not itself or a direct sibling. Finally, the algorithm picks
-an \(n\) with the largest, positive \(n_{siblings}\), preferring nodes
-lower in the tree as a tiebreaker. \(n_{selector}\) is used as the
-selector for the row and \(s\) is used as the selector for the column.
-The row and column selectors are used to generate a scraping adapter
-which returns the DOM elements corresponding to a superhero data row in
-the table and sets up the bidirectional synchronization.
+It chooses the element with the largest positive value of
+\(n_{siblings}\) as the row element, preferring nodes lower in the tree
+as a tiebreaker. It then generates a \emph{row selector} which returns
+the row element and all its direct siblings. The column selector is the
+selector that traverses from the row element to the demonstrated data
+value. These row and column selectors are then used to generate a
+scraping adapter which returns the DOM elements corresponding to a data
+row in the table and sets up the bidirectional synchronization.
 
 \hypertarget{live-programming}{%
 \subsection{Live Programming}\label{live-programming}}
@@ -526,54 +518,49 @@ depends on the step that clicks the button to open the menu.
 The row-sibling constraint we mentioned earlier is important for the end
 goal of customization because row elements that are not direct siblings
 may not represent data on the website that should be related as part of
-the same table by customizations such as sorting and filtering.
+the same table by customizations such as sorting and filtering. In
+Figure~\ref{fig:limitations} we demonstrate two examples where this
+limitation becomes relevant.
 
 \begin{figure*}
   \includegraphics[width=\textwidth]{media/limitations.png}
-  \caption{\label{fig:limitations} Our generalization algorithm cannot generalize on websites with the shown layouts. The elements with the blue border correspond to rows of the data in each layout respectively.}
+  \caption{\label{fig:limitations} Two example pages where our generalization algorithm does not currently work. The elements with the blue border correspond to rows of the data in each layout respectively.}
 \end{figure*}
 
-For \emph{Generalization Limitation 1} shown in
-Figure~\ref{fig:limitations}, without the constraint that row elements
-have to be direct siblings, the row generalization algorithm could
-determine the row selector to be \emph{.avenger} (elements with blue
-border) because it matches the largest number of parallel structures
-(has the largest \(n_{siblings}\)). While this may be the correct result
-for the task of extraction, it is not for the task of customization. The
-selector matches all rows across the two tables (elements with green
-border) so the sorting and filtering customizations could place rows in
-the incorrect table and thereby distort what the tables represent.
-Because of this, our system currently does not support such layouts but
-we plan to explore the possibility of extracting multiple tables from a
-website and joining them.
+\emph{Generalization Limitation 1} shows a case where the data is
+displayed in a grouped structure. Without the constraint that row
+elements have to be direct siblings, the row generalization algorithm
+could determine the row selector to be \emph{.avenger} (elements with
+blue border) because it matches the largest number of parallel
+structures (has the largest \(n_{siblings}\)). While this may be the
+correct result for the task of extraction, it is not necessarily
+suitable for the task of customization. When the user sorts and filters,
+this could result in rows moving between the two tables, disrupting the
+nested layout and producing a confusing result. Because of this, our
+system currently does not support such layouts. In the future, we may
+explore the possibility of extracting multiple tables from a website and
+joining them together.
 
-For \emph{Generalization Limitation 2} shown in
-Figure~\ref{fig:limitations}, website contains one table of data in
-which rows are made up of the alternating H1 and SPAN tags (elements
-with blue border). For the task of extraction, the DOM elements can be
-scraped using the shown classes to output a table in which the values of
-the H1 tags form the first column and the values of the SPAN tag form
-the second column. For the task of customization, our system would need
-to know what the row boundaries were in order for customizations such as
-sorting and filtering to work as expected. In Wildcard, this can be done
-with a hand-coded adapter by creating artificial row boundaries. In
-\emph{Generalization Limitation 2}'s layout, an artificial row boundary
-could be created by representing a row as an H1 tag and the SPAN tag
-that immediately follows it. These artificial rows would form a single
-unit which would not distort the website after a sorting or filtering
-customization. We plan to explore how such artificial row boundaries
-might be created via demonstration in order to support these structures
-(which are not uncommon, and can be seen, for example, in HackerNews).
+\emph{Generalization Limitation 2}, also in
+Figure~\ref{fig:limitations}, shows a case where the website contains
+one table of data in which rows are made up of alternating H1 and SPAN
+tags (elements with blue border). This poses a challenge because each
+row does not correspond directly to a single DOM element; instead, each
+row consists of multiple consecutive DOM elements without any grouped
+structure. Moving the rows when customizing the webpage would require
+treating multiple consecutive elements as a single row. This is
+supported in the underlying Wildcard system, but not yet by our tool.
 
-Another major limitation of our system is our current lack of support
-for scraping data loaded after the initial websites render as the user
-scrolls. Hand-coded adapters can specify event listeners on the DOM to
-re-execute the scraping code when new data is loaded as a user scrolls.
-In future work, will we provide a mechanism for end-users to specify
-when the adapter created via demonstration should re-execute its
-scraping code in response to user scrolling. There is a similar
-limitation for websites that have paged data but it is not clear how
-suitable such pages are for customization to begin with.
+Our system also does not support scraping data loaded after the initial
+websites render as the user scrolls. Site adapters hand-coded in
+Javascript can specify event listeners on the DOM to re-execute the
+scraping code when new data is loaded as a user scrolls. In future work,
+we plan to provide a mechanism for end-users to specify when a
+demonstrated adapter should re-execute its scraping code in response to
+user scrolling. We also do not support scraping data across multiple
+pages of related data, but this context poses more fundamental
+challenges to the idea of web customization, since users would somehow
+need to perform customizations across multiple pages in coordination.
 
 \hypertarget{sec:design-principles}{%
 \section{Design Principles}\label{sec:design-principles}}
